# multon_partners

./: README.md  pyproject.toml  task-1.ipynb  task-2.ipynb  utils.py  Задание 2.xlsx
