[tool.poetry]
name = "multon-partners"
version = "0.1.0"
description = ""
authors = ["Leonidee"]
readme = "README.md"
packages = [{include = "multon_partners"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.24.2"
plotly = "^5.13.0"
ipykernel = "^6.21.2"
tabulate = "^0.9.0"
gspread = "^5.7.2"
openpyxl = "^3.1.1"
geopandas = "^0.12.2"
matplotlib = "^3.7.0"
jinja2 = "^3.1.2"
prophet = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
